fix: JAR 파일 내의 리소스 사용시 파일 시스템 경로가 아닌 스트림으로 접근하여 해결 (#85)